<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.OTPActivity">


    <ImageView
        android:layout_width="95dp"
        android:layout_marginBottom="10dp"
        android:layout_height="89dp"
        android:id="@+id/imageView2"
        app:srcCompat="@drawable/otp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:textColor="@color/primary"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/verify_number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_otp"
        android:gravity="center"
        android:textSize="15sp"
        android:layout_marginBottom="10dp"
        android:textStyle="italic|bold"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/otp"
            android:hint="@string/otp"
            android:inputType="number" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>