<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:paddingHorizontal="24dp"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".activity.ProfileActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/profile_info"
        android:layout_marginBottom="15dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/profile"
        android:id="@+id/userImage"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/setup_your_profile"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textSize="16sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_marginTop="20sp"
            android:id="@+id/userName"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_name" />

        <Button
            android:id="@+id/continuebtn"
            android:layout_width="match_parent"
            android:layout_marginTop="25dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/signin" />
    </com.google.android.material.textfield.TextInputLayout>


</LinearLayout>