<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.NumberActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="95dp"
        android:layout_marginBottom="10dp"
        android:layout_height="89dp"
        app:srcCompat="@drawable/chat"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="44dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/verify_your_phone_number"
        android:textColor="@color/primary"
        android:textSize="24dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="61dp"
        tools:layout_editor_absoluteY="158dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="10dp"
        android:textStyle="italic"
        android:textColor="@color/black"
        android:text="@string/messanger_will_send_an_sms_message_to_verify_your_phone_number_enter_phone_number"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="207dp" />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/phoneNumber"
            android:hint="@string/phone_number" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/next" />
    </com.google.android.material.textfield.TextInputLayout>



</LinearLayout>